// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  background-color: #fff;
}

.c1 + .c0 {
  margin-top: 25px;
}

<div
  className="c0 c1"
>
  No Content
</div>
`;

exports[`renders correctly with a header 1`] = `
.c1 {
  background-color: #fff;
}

.c1 + .c0 {
  margin-top: 25px;
}

.c2 {
  border: 1px solid #ddd;
  border-radius: 6px 6px 0 0;
  padding: 15px 25px;
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    This is a header
  </header>
</div>
`;

exports[`renders correctly with a header and content 1`] = `
.c1 {
  background-color: #fff;
}

.c1 + .c0 {
  margin-top: 25px;
}

.c2 {
  border: 1px solid #ddd;
  border-radius: 6px 6px 0 0;
  padding: 15px 25px;
}

.c4 {
  border: 1px solid #ddd;
  border-top: none;
  padding: 25px;
  position: relative;
}

.c4 + .c3 {
  padding-top: 25px;
}

.c4:last-child {
  border-radius: 0 0 6px 6px;
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    This is a header
  </header>
  <section
    className="c3 c4"
  >
    This is the panels content
  </section>
</div>
`;
